--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div id="content">
             <div id="calculator">
                 <div id="screen">
+                    <span id="screen-subtext"></span>
                     <span id="screen-text">0</span>
                 </div>
                 <div id="keypad">
