--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div id="footer">
-            <h5>By: Wantonfury</h5>
+            <h5>By: Alexandru Orzan</h5>
         </div>
     </body>
 </html>
